--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,6 @@
         <h1>{{title}}</h1>
         {{#if error}}
-            <div style="color: red;">{{error}}</div>
+            <div>{{error}}</div>
         {{/if}}
         <form id="registration-form" action="/register" method="POST">
             <div>
