--- a/views/channels.handlebars
+++ b/views/channels.handlebars
@@ -28,7 +28,7 @@
 
   <!-- Displaying the message if any -->
   {{#if message}}
-    <p style="color: red;">{{message}}</p>
+    <p>{{message}}</p>
   {{/if}}
 
   <!-- List of channels -->
@@ -53,7 +53,7 @@
   <!-- Add New Channel Form -->
   <form method="POST" id="addChannelForm">
     <p>Add new channel here:</p>
-    <div style="color: red;" id="errorDisplay">{{error}}</div>
+    <div id="errorDisplay">{{error}}</div>
     <label for="channelTitle">Channel Title:</label>
     <input type="text" id="channelTitle" name="channelTitle" /><br />
     <label for="channelOwnerName">Channel Owner Name:</label>
