--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 {{#if error}}
-  <div style="color: red;">{{error}}</div>
+  <div>{{error}}</div>
 {{/if}}
 <form id="login-form" action="/login" method="POST">
   <div>
