edit client side validation
login, register, add channel

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,7 +1,7 @@
         <h1>{{title}}</h1>
-        {{#if error}}
-            <div>{{error}}</div>
-        {{/if}}
+        
+            <div id="error-message">{{error}}</div>
+        
         <form id="registration-form" action="/register" method="POST">
             <div>
                 <label for="firstNameInput">First Name:</label>
