--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,5 @@
 <h1>Login</h1>
-{{#if error}}
-  <div>{{error}}</div>
-{{/if}}
+<div id="error-message">{{error}}</div>
 <form id="login-form" action="/login" method="POST">
   <div>
     <label for="emailAddressInput">Email Address:</label>
